feat: add client validation for api actor and film (#5)
* feat: add validation for api actor

* feat: add validation for api film
