# api/api-actor.swagger.yaml
@@ -5,10 +5,10 @@ info:
     description: 'API documentation for Film rental store management system'
     contacts: {name: 'Tuyen Tran', email: trthtuyen99@gmail.com}
 servers:
-    - {url: 'http://localhost:3000', description: 'Development server'}
+    - {url: 'http://localhost:8000', description: 'Development server'}
 paths:
-    /v1/actors: {get: {summary: 'Returns a list of all actors', tags: [Actors], responses: {'200': {description: 'List of actors', content: {application/json: {schema: {type: array, items: {$ref: '#/components/schemas/Actor'}}}}}}}, post: {summary: 'Create a new actor', tags: [Actors], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, responses: {'201': {description: 'Actor created successfully', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '400': {description: 'Invalid input', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}}
-    '/v1/actors/{id}': {get: {summary: 'Get actor by ID', tags: [Actors], parameters: [{in: path, name: id, schema: {type: string}, required: true, desription: 'Actor ID'}], responses: {'200': {description: 'Actor found', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '404': {description: 'Actor not found', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}, delete: {summary: 'Delete an actor', tags: [Actors], parameters: [{in: path, name: id, schema: {type: string}, required: true, desription: 'Actor ID'}], responses: {'200': {description: 'Actor deleted successfully', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '404': {description: 'Actor not found to be deleted', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}, put: {summary: 'Update an actor', tags: [Actors], parameters: [{in: path, name: id, schema: {type: string}, required: true, desription: 'Actor ID'}], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, responses: {'200': {description: 'Actor updated successfully', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '400': {description: 'Invalid input', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}, '404': {description: 'Actor not found to be updated', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}}
+    /v1/actors: {get: {summary: 'Returns a list of all actors', tags: [Actors], responses: {'200': {description: 'List of actors', content: {application/json: {schema: {type: array, items: {$ref: '#/components/schemas/Actor'}}}}}}}, post: {summary: 'Create a new actor', tags: [Actors], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/ActorInput'}}}}, responses: {'201': {description: 'Actor created successfully', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '400': {description: 'Invalid input', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}}
+    '/v1/actors/{id}': {get: {summary: 'Get actor by ID', tags: [Actors], parameters: [{in: path, name: id, schema: {type: string}, required: true, description: 'Actor ID'}], responses: {'200': {description: 'Actor found', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '404': {description: 'Actor not found', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}, delete: {summary: 'Delete an actor', tags: [Actors], parameters: [{in: path, name: id, schema: {type: string}, required: true, description: 'Actor ID'}], responses: {'200': {description: 'Actor deleted successfully', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '404': {description: 'Actor not found to be deleted', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}, put: {summary: 'Update an actor', tags: [Actors], parameters: [{in: path, name: id, schema: {type: string}, required: true, description: 'Actor ID'}], requestBody: {required: true, content: {application/json: {schema: {$ref: '#/components/schemas/ActorInput'}}}}, responses: {'200': {description: 'Actor updated successfully', content: {application/json: {schema: {$ref: '#/components/schemas/Actor'}}}}, '400': {description: 'Invalid input', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}, '404': {description: 'Actor not found to be updated', content: {application/json: {schema: {$ref: '#/components/schemas/Error'}}}}}}}
 components:
-    schemas: {Actor: {type: object, required: [firstName, lastName], properties: {actorId: {type: string, description: 'Auto-generated ID of the actor'}, firstName: {type: string, description: 'First name of the actor'}, lastName: {type: string, description: 'Last name of the actor'}}}, Error: {type: object, required: [errorId, message], properties: {errorId: {type: string, description: 'Error code of errors'}, message: {type: string, description: 'Error message of errors'}}}}
+    schemas: {Actor: {type: object, required: [firstName, lastName], properties: {actorId: {type: string, description: 'Auto-generated ID of the actor'}, firstName: {type: string, description: 'First name of the actor'}, lastName: {type: string, description: 'Last name of the actor'}}}, ActorInput: {type: object, required: [firstName, lastName], properties: {firstName: {type: string, description: 'First name of the actor'}, lastName: {type: string, description: 'Last name of the actor'}}}, Error: {type: object, required: [errorId, message], properties: {errorId: {type: string, description: 'Error code of errors'}, message: {type: string, description: 'Error message of errors'}}}}
 tags: []
